--- a/src/main/resources/css/news_popup.css
+++ b/src/main/resources/css/news_popup.css
@@ -22,7 +22,7 @@
   
   
  .tab1-img{
-   background-image: url(newdesign.png);
+   background-image: url(issuesum.png);
    background-position-x: 90%;
    background-position-y: 10%;
    background-size: 85%;
@@ -32,7 +32,7 @@
  }
  
  .tab2-img{
-   background-image: url(reportingDone.png);
+   background-image: url(newtime.png);
    background-position-x: 90%;
    background-position-y: 10%;
    background-size: 85%;
@@ -41,7 +41,7 @@
  }
  
  .tab3-img{
-   background-image: url(indicatorDone.png);
+   background-image: url(exportformat.png);
    background-position-x: 90%;
    background-position-y: 10%;
    background-size: 85%;
@@ -51,7 +51,17 @@
  }
  
  .tab4-img{
-   background-image: url(permission.png);
+   background-image: url(csvexport.png);
+   background-position-x: 90%;
+   background-position-y: 10%;
+   background-size: 85%;
+   background-repeat-x: no-repeat;
+   background-repeat-y: no-repeat;
+   
+ }
+ 
+ .tab5-img{
+   background-image: url(future.png);
    background-position-x: 90%;
    background-position-y: 10%;
    background-size: 85%;
