--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -48,10 +48,10 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
 				excludeDays : ${excludeDays},
 				isColoring : ${userSettings.coloring},
 				loggedDays : ${loggedDays},
-				isDurationSelected : ${isDurationSelected},
+				isDurationSelected : ${worklogValues.duration},
 				projectsId : ${projectsId},
-				issueKey : '${issueKey}',
-				comment: '${comment}',
+				issueKey : '${worklogValues.issueKey}',
+				comment: '${worklogValues.comment}',
 				actionFlag: '${actionFlag}',
 				worklogSize: ${worklogs.size()},
 				isRounded : ${userSettings.rounded},
@@ -170,7 +170,7 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
                   <div class="field-group">
                     <label for="startTime">$i18n.getText("plugin.start.time")<span class="aui-icon icon-required">(required)</span></label>
                     <input id="startTime" class="text short-field"
-                      value="$startTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#endTime');"
+                      value="$worklogValues.startTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#endTime');"
                       name="startTime" maxlength="5" tabindex="2"
                       pattern="^([01][0-9]|2[0-3]):[0-5][0-9]$" title="hh:mm"
                       onblur="everit.jttp.main.selectCalculationType();"
@@ -184,7 +184,7 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
                     <span class="time-input-span">
                       <input id="endTime" class="text short-field"
                         name="endTime" maxlength="5" tabindex="3"
-                        value="$endTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
+                        value="$worklogValues.endTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
                         onclick="everit.jttp.main.endTimeInputClick();"
                         pattern="^([01][0-9]|2[0-3]):[0-5][0-9]$" title="empty or hh:mm" 
                         onblur="everit.jttp.main.calculateDuration();"
@@ -200,7 +200,7 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
                     <span class="time-input-span">
                       <input id="durationTime" class="text short-field"
                         name="durationTime" tabindex="2"
-                        value="$durationTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
+                        value="$worklogValues.durationTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
                         onclick="everit.jttp.main.durationTimeInput();"
                         title="empty or hh:mm" disabled 
                         onblur="everit.jttp.main.calculateEndTime();">
