--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -229,31 +229,55 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.popu
             </div>
           </div>
           #if($userSettings.showRemaningEstimate)
-          <div class="aui-group">
+          <div style="margin: 10px 0 0 0;">
+            <label>$i18n.getText("plugin.jttp.remainingestimate")</label>
+          </div>
+          <div class="aui-group" style="margin: 5px 0 10px 0;">
             <div class="aui-item">
-              <input id="remaining_estimate_auto" type="radio" name="remainingEstimateType" value="AUTO" class="settings-input" #if($worklogValues.remainingEstimateType == 'AUTO') checked="true" #end onclick="return everit.jttp.main.reamingEstimateChange('AUTO')">  
-              <label for="remaining_estimate_auto">$i18n.getText("plugin.setting.remainingestimatetype.auto")</label>
+              <button id="remaining_estimate_auto" type="button" name="remainingEstimateType" 
+                class="aui-button" data-jttp-remaining-estimate-type="AUTO"
+                #if($worklogValues.remainingEstimateType == 'AUTO') checked="true" #end 
+                onclick="return everit.jttp.main.reamingEstimateChange(this)">
+                <span class="aui-icon aui-icon-small aui-iconfont-success" #if($worklogValues.remainingEstimateType != 'AUTO') style="display:none;" #end>Checked </span>
+                $i18n.getText("plugin.jttp.remainingestimatetype.auto")
+              </button>  
             </div>
             <div class="aui-item" style="text-align: center;">
-              <input id="remaining_estimate_leave" type="radio" name="remainingEstimateType" value="LEAVE" class="settings-input" #if($worklogValues.remainingEstimateType == 'LEAVE') checked="true" #end onclick="return everit.jttp.main.reamingEstimateChange('LEAVE')">  
-              <label for="remaining_estimate_leave">$i18n.getText("plugin.setting.remainingestimatetype.leave")</label>
+              <button id="remaining_estimate_leave" type="button" name="remainingEstimateType" 
+                class="aui-button" data-jttp-remaining-estimate-type="LEAVE"
+                #if($worklogValues.remainingEstimateType == 'LEAVE') checked="true" #end 
+                onclick="return everit.jttp.main.reamingEstimateChange(this)">
+                <span class="aui-icon aui-icon-small aui-iconfont-success" #if($worklogValues.remainingEstimateType != 'LEAVE') style="display:none;" #end>Checked </span>
+                $i18n.getText("plugin.jttp.remainingestimatetype.leave")
+              </button>
             </div>
             <div class="aui-item" style="text-align: center;">
-              <input id="remaining_estimate_new" type="radio" name="remainingEstimateType" value="NEW" class="settings-input" #if($worklogValues.remainingEstimateType == 'NEW') checked="true" #end onclick="return everit.jttp.main.reamingEstimateChange('NEW')">
-              <label for="remaining_estimate_new">$i18n.getText("plugin.setting.remainingestimatetype.new")</label>
+              <button id="remaining_estimate_new" type="button" name="remainingEstimateType" 
+                class="aui-button" data-jttp-remaining-estimate-type="NEW" 
+                #if($worklogValues.remainingEstimateType == 'NEW') checked="true" #end 
+                onclick="return everit.jttp.main.reamingEstimateChange(this)">
+               <span class="aui-icon aui-icon-small aui-iconfont-success" #if($worklogValues.remainingEstimateType != 'NEW') style="display:none;" #end>Checked </span>
+                $i18n.getText("plugin.jttp.remainingestimatetype.new")
+              </button>
               <input class="text short-field tooltip-bottom" id="newEstimate" name="newEstimate" 
-                type="text" title="$i18n.getText("plugin.setting.remainingestimatetype.new.tooltip")" 
+                type="text" title="$i18n.getText("plugin.jttp.remainingestimatetype.new.tooltip")" 
                 #if($worklogValues.remainingEstimateType != 'NEW') disabled="disabled" #end
                 value="$worklogValues.newEstimate">
             </div>
             <div class="aui-item" style="text-align: right;">
             #if($actionFlag != 'edit')
-              <label for="remaining_estimate_manual">$i18n.getText("plugin.setting.remainingestimatetype.manual")</label>
+              <button id="remaining_estimate_new" type="button" name="remainingEstimateType" 
+                class="aui-button" data-jttp-remaining-estimate-type="MANUAL" 
+                onclick="return everit.jttp.main.reamingEstimateChange(this)">
+                <span class="aui-icon aui-icon-small aui-iconfont-success" #if($worklogValues.remainingEstimateType != 'MANUAL') style="display:none;" #end>Checked </span>
+                $i18n.getText("plugin.jttp.remainingestimatetype.manual")
+              </button>
               <input class="text short-field tooltip-bottom" id="adjustmentAmount" name="adjustmentAmount" 
-                type="text" title="$i18n.getText("plugin.setting.remainingestimatetype.manual.tooltip")" 
+                type="text" title="$i18n.getText("plugin.jttp.remainingestimatetype.manual.tooltip")" 
                 #if($worklogValues.remainingEstimateType != 'MANUAL') disabled="disabled" #end
                 value="$worklogValues.adjustmentAmount">
             #end
+            <input type="hidden" hidden="hidden" id="remainingEstimateType" name="remainingEstimateType" value="$worklogValues.remainingEstimateType">
             </div>
           </div>
           #end
