--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -266,7 +266,7 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.popu
             </div>
             <div class="aui-item" style="text-align: right;">
             #if($actionFlag != 'edit')
-              <button id="remaining_estimate_new" type="button" name="remainingEstimateType" 
+              <button id="remaining_estimate_manual" type="button" name="remainingEstimateType" 
                 class="aui-button" data-jttp-remaining-estimate-type="MANUAL" 
                 onclick="return everit.jttp.main.reamingEstimateChange(this)">
                 <span class="aui-icon aui-icon-small aui-iconfont-success" #if($worklogValues.remainingEstimateType != 'MANUAL') style="display:none;" #end>Checked </span>
