fixed design problem. Add mising javadoc. Some code refactor.

--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -281,7 +281,7 @@ div#jttp-logwork-time {
 
 div#jttp-logwork-time > div.field-group {
   width: auto;
-  margin-right: 3.45rem;
+  margin-right: 53px;
 }
 
 div#jttp-logwork-time > div.field-group > input.text{
