--- a/src/main/resources/templates/timetracker/user_settings.vm
+++ b/src/main/resources/templates/timetracker/user_settings.vm
@@ -92,6 +92,12 @@
             <input id="radioDuration" type="radio" name="activeField" value="duration" class="settings-input" #if($activeFieldDuration) checked="true" #end>
             <label for="radioDuration">$i18n.getText("plugin.setting.active.field.duration")</label>
           </div>
+          <div class="description">$i18n.getText("plugin.setting.active.field.help")</div>
+        </div>
+        <div class="field-group">
+          <label>$i18n.getText("plugin.setting.default.starttime"):</label>
+          <input id="defaultStartTime"  type="text" name="defaultStartTime" value="$defaultStartTime" class="time-input settings-input text short-field"/>
+          <div class="description">$i18n.getText("plugin.setting.default.starttime.help")</div>
         </div>
         <div class="field-group">
           <label>$i18n.getText("plugin.setting.starttime.value"):</label>
