--- a/src/main/resources/templates/timetracker/user_settings.vm
+++ b/src/main/resources/templates/timetracker/user_settings.vm
@@ -34,6 +34,9 @@
       <div class="aui-page-header-main">
         <h1>Timetracker Settings</h1>
       </div>
+      <div class="aui-page-header-actions">
+        <p class="installed-version">$i18n.getText("plugin.settings.installed.plugin.version") $analyticsDTO.pluginVersion<p>
+      </div>
     </div>
   </header>
   
