--- a/src/main/resources/templates/timetracker/permission_settings.vm
+++ b/src/main/resources/templates/timetracker/permission_settings.vm
@@ -39,7 +39,7 @@
       <div class="aui-page-header-image">
          <span class="aui-avatar aui-avatar-large">
            <span class="aui-avatar-inner">
-             <a href="http://www.everit.biz/index.php?nyelv=en" target="_blank">
+             <a href="http://www.everit.biz/solutions-for-atlassian-jira/index_en" target="_blank">
                <div class="everit_logo" alt="Everit reporting logo"></div>
              </a>
            </span>
