--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -212,6 +212,10 @@ td.jttp-worklog-no-remaining {
 #jttp-worklog-table tbody tr:hover {
   background-color: #f5f5f5;
 }
+.operation-table tbody tr,
+.operation-table tbody tr:hover{
+  background-color: transparent!important;
+}
 
 table.aui>thead>tr>th {
   color: #707070;
