Fix date picker format (use advanced settings).

--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -62,7 +62,7 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.popu
 				defaultCommand: $defaultCommand,
 				jiraOffset: ${jiraOffset},
 				jiraTime: ${jiraTime.getMillis()},
-				jiraFormatedDate: "${jiraDate}",
+				jiraFormatedDate: "${jiraDateInJSDatePickerFormat}",
 			}
 		);
 	})(everit.jttp.main, AJS.$);
