--- a/src/main/resources/templates/reporting/missing_worklogs_report.vm
+++ b/src/main/resources/templates/reporting/missing_worklogs_report.vm
@@ -46,6 +46,8 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
 				useISO8601 : ${currentCalendar.useISO8601},
 				dateFromFormated : ${dateFromFormated},
 				dateToFormated : ${dateToFormated},
+				dateToInJSFormat: "${endDateInJSDatePickerFormat}",
+				dateFromInJSFormat: "${fromDateInJSDatePickerFormat}",
 				dateFormat: "${dateFormat}"
 			}
 		);
@@ -171,7 +173,7 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
                                 #foreach ($missings in $showDatesWhereNoWorklog)
                                   <tr>
                                     <td>
-                                      <a href="JiraTimetrackerWebAction.jspa?date=$missings.date.getTime()">$dateTimeFormatter.format($missings.date)</a>
+                                      <a href="JiraTimetrackerWebAction.jspa?date=$missings.date.getTime()">$dateFormatInUserTimeZOne.format($missings.date)</a>
                                     </td>
                                     <td>$missings.hour</td>
                                   </tr>
