--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -48,7 +48,10 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.popu
             worklogDetailsEmpty: ${worklogDetailsEmpty},
             dateToFormated: ${filterCondition.worklogEndDate},
             dateFromFormated: ${filterCondition.worklogStartDate},
+            dateToInJSFormat: "${endDateInJSDatePickerFormat}",
+            dateFromInJSFormat: "${startDateInJSDatePickerFormat}",
             dateCreatedFormated: +"${filterCondition.issueCreateDate}",
+            createDateInJSFormat: "${isueCreateDateInJSFormat}",
             selectedProjects : ${filterCondition.projectIds},
             selectedStatus: ${filterCondition.issueStatusIds},
             selectedTypes: ${filterCondition.issueTypeIds},
