--- a/src/main/resources/templates/reporting/chart_report.vm
+++ b/src/main/resources/templates/reporting/chart_report.vm
@@ -49,6 +49,8 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
 				hasBrowseUsersPermission: ${hasBrowseUsersPermission},
 				dateFromFormated : ${dateFromFormated},
 				dateToFormated : ${dateToFormated},
+				dateToInJSFormat: "${endDateInJSDatePickerFormat}",
+				dateFromInJSFormat: "${fromDateInJSDatePickerFormat}",
 				dateFormat: "${dateFormat}"
 			}
 		);
