--- a/src/main/resources/templates/reporting/table_report.vm
+++ b/src/main/resources/templates/reporting/table_report.vm
@@ -46,6 +46,8 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
         hasBrowseUsersPermission: ${hasBrowseUsersPermission},
         dateFromFormated : ${dateFromFormated},
         dateToFormated : ${dateToFormated},
+        dateToInJSFormat: "${endDateInJSDatePickerFormat}",
+		dateFromInJSFormat: "${fromDateInJSDatePickerFormat}",
         dateFormat: "${dateFormat}"
       }
     );
